examples/bad/ERROR_MISSING_MAIN/no_main.st
language core;

fn increment_twice(n : Nat) -> Nat {
  return succ(succ(n))
}
//ERROR_MISSING_MAIN
